fixed alignment issues

--- a/style.css
+++ b/style.css
@@ -66,7 +66,6 @@ body {
 
 .team-block {
     display: flex;
-    flex-direction: flex-start;
     width: 75%;
 }
 
@@ -74,6 +73,10 @@ body {
     align-self: flex-end;
     animation-duration: 2s;
     animation-name: slide-right;
+}
+
+.team-block.right {
+    flex-direction: row-reverse;
 }
 
 @keyframes slide-right {
